<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Jass scorer</string>
    <string name="app_author">Laurent Constantin</string>

    <!-- Legende -->
    <string name="type_1">Simple</string>
    <string name="type_2">Double</string>
    <string name="type_3">downward</string>
    <string name="type_4">upwards</string>
    <string name="type_5">Slalom</string>
    <string name="type_6">Any asset</string>

    <string-array name="type_array">
        <item>@string/type_1</item>
        <item>@string/type_2</item>
        <item>@string/type_3</item>
        <item>@string/type_4</item>
        <item>@string/type_5</item>
        <item>@string/type_6</item>
    </string-array>

    <!-- Equipes -->
    <string name="team_1">Team 1</string>
    <string name="team_2">Team 2</string>

    <plurals name="points">
        <item quantity="zero">%d point</item>
        <item quantity="one">%d point</item>
        <item quantity="other">%d points</item>
    </plurals>

    <string name="score_input_1">Input for team 1</string>
    <string name="score_input_2">Input for team 2</string>

    <!-- boutons -->
    <string name="announcement_btn">announcement</string>
    <string name="score_btn">Score</string>
    <string name="score_graph_legend">Score</string>

    <!-- menu -->
    <string name="menu_reset">Reset</string>
    <string name="menu_about">About</string>
    <string name="menu_cancel">Cancel</string>
    <string name="menu_settings">@string/settings_title</string>
    <!-- messages d'erreur et de confirmations -->
    <string name="error_empty">Fields are empty</string>
    <string name="error_full">Only one field should be filled</string>
    <string name="error_high_value">Score is too high</string>
    <string name="error_format">Invalid number</string>
    <string name="score_reset_confirm_title">@string/menu_reset</string>
    <string name="score_reset_confirm">Do you really want to reset?</string>

    <!-- A Propos -->
    <string name="about_site_url">http://github.com/ragusa87/android-Chibre#readme</string>
    <string name="about_site">Website</string>
    <string name="about_licence">Licence</string>

</resources>